adding docker cache

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,13 +1,10 @@
-# This is a sample build configuration for Docker.
-# Check our guides at https://confluence.atlassian.com/x/O1toN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
 image: atlassian/default-image:2
 
 pipelines:
   default:
     - step:
+        caches:
+          - docker
         services:
           - docker
         script: # Modify the commands below to build your repository.
