--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,14 @@
 name: CI
 
-on: [push]
-
+on:
+  push:
+    branches: 
+      - master
+      - staging
+  pull_request:
+    branches: 
+      - master
+      - staging
 jobs:
   build:
     runs-on: ${{ matrix.os }}
