--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-cbdl = {editable = true,path = "."}
+streamdl = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
