Adding websites to config file

--- a/config.yml.example
+++ b/config.yml.example
@@ -1,4 +1,4 @@
-users:
+chaturbate.com:
 - mashayang
 - dawnwillow
 - anibutler
@@ -6,3 +6,5 @@ users:
 - mothandrust
 - easygoing1
 - bekkalight
+twitch.tv:
+- kaypealol
