Update example config file

--- a/config.yml.example
+++ b/config.yml.example
@@ -1,10 +1,5 @@
-chaturbate.com:
-- mashayang
-- dawnwillow
-- anibutler
-- skyewatson
-- mothandrust
-- easygoing1
-- bekkalight
-twitch.tv:
+twitch.tv
 - kaypealol
+- day9tv
+youtube
+- UC4w1YQAJMWOz4qtxinq55LQ
