--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@ branches:
   only:
   - staging
   - master
-  - testing
 language: python
 python:
-- '3.7.4'
+- '3.7.5'
+- '3.8'
+- 'nightly'
 install:
 - pip install pipenv bandit
 - pipenv install -e .
 script:
-- pytest -sv
+- pytest -v
 - bandit streamdl.py
 notifications:
   slack:
