--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
+# This is an example of the necessary docker-compose config
 version: '3'
 
 services:
   streamdl:
-    build: .
-    restart: unless-stopped
+    image: dangeroustech/streamdl:latest
+    restart: always
     volumes:
-      - data:/app/out # data volume
+      - /media/downloads:/app/out # downloads location
       - ./config.yml:/app/config.yml # config file
     environment:
       - REPEAT_TIME=5 # time to repeat, in minutes
       - LOG_LEVEL=DEBUG # log level
-      - CONFIG=config.yml # config file name
-
-volumes:
-  data:
