--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - docker build -t streamdl:stable .
     - docker images
-    - docker tag streamdl dangeroustech/streamdl:stable
+    - docker tag streamdl:stable dangeroustech/streamdl:stable
     - docker push dangeroustech/streamdl:stable
 
 notifications:
