Update Python to 3.8

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+bandit = "*"
+pytest = "*"
 
 [packages]
 streamdl = {editable = true,path = "."}
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
