Update Travis Tests and README to Python 3.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,23 +16,23 @@ branches:
   - master
 
 stages:
-  - test-3.7
-  - test-3.8
+  - test_3.8
+  - test_3.8-dev
   - build
   - deploy
 
 jobs:
   include:
-  - stage: "test-3.7"
-    python: "3.7"
+  - stage: "test_3.8"
+    python: "3.8"
     install:
     - pip install pipenv bandit
     - pipenv install -e .
     script:
     - pipenv run pytest -v
     - pipenv run bandit streamdl.py
-  - stage: "test-3.8"
-    python: "3.8"
+  - stage: "test_3.8-dev"
+    python: "3.8-dev"
     install:
       - pip install pipenv bandit
       - pipenv install -e .
