--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7"
 youtube_dl = "2020.5.29"
 PyYAML = "5.3.1"
 requests = "2.23.0"
+streamlink = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
