--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -6,7 +6,8 @@ services:
     image: dangeroustech/streamdl:stable
     restart: always
     volumes:
-      - /media/downloads:/app/out # downloads location
+      - /media/downloads/incomplete:/app/dl # in-progress downloads location
+      - /media/downloads/complete:/app/out # completed downloads location
       - ./config.yml:/app/config.yml # config file
     environment:
       - REPEAT_TIME=5 # time to repeat, in minutes
