--- a/.bandit.yml
+++ b/.bandit.yml
@@ -1,42 +1,4 @@
-any_other_function_with_shell_equals_true:
-  no_shell:
-  - os.execl
-  - os.execle
-  - os.execlp
-  - os.execlpe
-  - os.execv
-  - os.execve
-  - os.execvp
-  - os.execvpe
-  - os.spawnl
-  - os.spawnle
-  - os.spawnlp
-  - os.spawnlpe
-  - os.spawnv
-  - os.spawnve
-  - os.spawnvp
-  - os.spawnvpe
-  - os.startfile
-  shell:
-  - os.system
-  - os.popen
-  - os.popen2
-  - os.popen3
-  - os.popen4
-  - popen2.popen2
-  - popen2.popen3
-  - popen2.popen4
-  - popen2.Popen3
-  - popen2.Popen4
-  - commands.getoutput
-  - commands.getstatusoutput
-#   subprocess:
-#   - subprocess.Popen
-#   - subprocess.call
-#   - subprocess.check_call
-#   - subprocess.check_output
-#   - subprocess.run
-# hardcoded_tmp_directory:
+hardcoded_tmp_directory:
   tmp_dirs:
   - /tmp
   - /var/tmp
@@ -97,196 +59,6 @@ ssl_with_bad_version:
   - PROTOCOL_TLSv1
   - SSLv3_METHOD
   - TLSv1_METHOD
-# start_process_with_a_shell:
-#   no_shell:
-#   - os.execl
-#   - os.execle
-#   - os.execlp
-#   - os.execlpe
-#   - os.execv
-#   - os.execve
-#   - os.execvp
-#   - os.execvpe
-#   - os.spawnl
-#   - os.spawnle
-#   - os.spawnlp
-#   - os.spawnlpe
-#   - os.spawnv
-#   - os.spawnve
-#   - os.spawnvp
-#   - os.spawnvpe
-#   - os.startfile
-#   shell:
-#   - os.system
-#   - os.popen
-#   - os.popen2
-#   - os.popen3
-#   - os.popen4
-#   - popen2.popen2
-#   - popen2.popen3
-#   - popen2.popen4
-#   - popen2.Popen3
-#   - popen2.Popen4
-#   - commands.getoutput
-#   - commands.getstatusoutput
-#   # subprocess:
-#   # - subprocess.Popen
-#   # - subprocess.call
-#   # - subprocess.check_call
-#   # - subprocess.check_output
-#   # - subprocess.run
-# start_process_with_no_shell:
-#   no_shell:
-#   - os.execl
-#   - os.execle
-#   - os.execlp
-#   - os.execlpe
-#   - os.execv
-#   - os.execve
-#   - os.execvp
-#   - os.execvpe
-#   - os.spawnl
-#   - os.spawnle
-#   - os.spawnlp
-#   - os.spawnlpe
-#   - os.spawnv
-#   - os.spawnve
-#   - os.spawnvp
-#   - os.spawnvpe
-#   - os.startfile
-#   shell:
-#   - os.system
-#   - os.popen
-#   - os.popen2
-#   - os.popen3
-#   - os.popen4
-#   - popen2.popen2
-#   - popen2.popen3
-#   - popen2.popen4
-#   - popen2.Popen3
-#   - popen2.Popen4
-#   - commands.getoutput
-#   - commands.getstatusoutput
-#   subprocess:
-#   - subprocess.Popen
-#   - subprocess.call
-#   - subprocess.check_call
-#   - subprocess.check_output
-#   - subprocess.run
-# start_process_with_partial_path:
-#   no_shell:
-#   - os.execl
-#   - os.execle
-#   - os.execlp
-#   - os.execlpe
-#   - os.execv
-#   - os.execve
-#   - os.execvp
-#   - os.execvpe
-#   - os.spawnl
-#   - os.spawnle
-#   - os.spawnlp
-#   - os.spawnlpe
-#   - os.spawnv
-#   - os.spawnve
-#   - os.spawnvp
-#   - os.spawnvpe
-#   - os.startfile
-#   shell:
-#   - os.system
-#   - os.popen
-#   - os.popen2
-#   - os.popen3
-#   - os.popen4
-#   - popen2.popen2
-#   - popen2.popen3
-#   - popen2.popen4
-#   - popen2.Popen3
-#   - popen2.Popen4
-#   - commands.getoutput
-#   - commands.getstatusoutput
-#   subprocess:
-#   - subprocess.Popen
-#   - subprocess.call
-#   - subprocess.check_call
-#   - subprocess.check_output
-#   - subprocess.run
-# subprocess_popen_with_shell_equals_true:
-#   no_shell:
-#   - os.execl
-#   - os.execle
-#   - os.execlp
-#   - os.execlpe
-#   - os.execv
-#   - os.execve
-#   - os.execvp
-#   - os.execvpe
-#   - os.spawnl
-#   - os.spawnle
-#   - os.spawnlp
-#   - os.spawnlpe
-#   - os.spawnv
-#   - os.spawnve
-#   - os.spawnvp
-#   - os.spawnvpe
-#   - os.startfile
-#   shell:
-#   - os.system
-#   - os.popen
-#   - os.popen2
-#   - os.popen3
-#   - os.popen4
-#   - popen2.popen2
-#   - popen2.popen3
-#   - popen2.popen4
-#   - popen2.Popen3
-#   - popen2.Popen4
-#   - commands.getoutput
-#   - commands.getstatusoutput
-#   subprocess:
-#   - subprocess.Popen
-#   - subprocess.call
-#   - subprocess.check_call
-#   - subprocess.check_output
-#   - subprocess.run
-# subprocess_without_shell_equals_true:
-#   no_shell:
-#   - os.execl
-#   - os.execle
-#   - os.execlp
-#   - os.execlpe
-#   - os.execv
-#   - os.execve
-#   - os.execvp
-#   - os.execvpe
-#   - os.spawnl
-#   - os.spawnle
-#   - os.spawnlp
-#   - os.spawnlpe
-#   - os.spawnv
-#   - os.spawnve
-#   - os.spawnvp
-#   - os.spawnvpe
-#   - os.startfile
-#   shell:
-#   - os.system
-#   - os.popen
-#   - os.popen2
-#   - os.popen3
-#   - os.popen4
-#   - popen2.popen2
-#   - popen2.popen3
-#   - popen2.popen4
-#   - popen2.Popen3
-#   - popen2.Popen4
-#   - commands.getoutput
-#   - commands.getstatusoutput
-#   subprocess:
-#   - subprocess.Popen
-#   - subprocess.call
-#   - subprocess.check_call
-#   - subprocess.check_output
-#   - subprocess.run
 try_except_continue:
   check_typed_exception: false
 try_except_pass:
