--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -39,9 +39,10 @@ jobs:
 
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+      - uses: actions/checkout@v2
+      - uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64, linux/arm64, linux/armhf
           push: true
-          tags: dangeroustech/streamdl:latest
+          tags: dangeroustech/streamdl:lates
