--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -25,6 +25,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -39,8 +42,7 @@ jobs:
 
       - name: Build and push
         id: docker_build
-      - uses: actions/checkout@v2
-      - uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64, linux/arm64, linux/armhf
