--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -44,7 +44,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build
+      - name: Docker Build
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -53,7 +53,7 @@ jobs:
         #   platforms: linux/amd64, linux/arm64, linux/armhf
           tags: ${{ env.TEST_TAG }}
     
-      - name: Push
+      - name: Dockerhub Push
         if: ${{ github.ref == 'refs/heads/master' }}
         id: dockerhub_push
         uses: docker/build-push-action@v2
