--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -2,7 +2,7 @@ name: "Deploy"
 
 on:
   push:
-    branches: [staging]
+    branches: [master, staging]
   pull_request:
     branches: [master, staging]
 
