--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [master, staging]
 
-env:
-  TEST_TAG: dangeroustech/streamdl:ci
-
 jobs:
   test:
     name: Test
@@ -50,9 +47,9 @@ jobs:
         with:
           context: .
           load: true
-          tags: ${{ env.TEST_TAG }}
+          tags: dangeroustech/streamdl:latest
     
-      - name: Dockerhub Push
+      - name: Dockerhub Push Stable
         if: ${{ github.ref == 'refs/heads/master' }}
         id: dockerhub_push
         uses: docker/build-push-action@v2
@@ -60,4 +57,18 @@ jobs:
           context: .
           platforms: linux/amd64, linux/arm64, linux/armhf
           push: true
-          tags: dangeroustech/streamdl:latest
+          tags: |
+            dangeroustech/streamdl:latest
+            dangeroustech/streamdl:stable
+
+      - name: Dockerhub Push Staging
+        if: ${{ github.ref == 'refs/heads/staging' }}
+        id: dockerhub_push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64, linux/arm64, linux/armhf
+          push: true
+          tags: |
+            dangeroustech/streamdl:latest
+            dangeroustech/streamdl:staging
