fix: author and version bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "StreamDL"
-version = "1.2.5"
+version = "1.2.9"
 description = "Monitor and Download Streams from a Variety of Websites"
 authors = [
-    "biodrone"
+    "biodrone<biodrone@dangerous.tech>"
 ]
 readme = "README.md"
 
