--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,7 @@
 name = "StreamDL"
 version = "1.2.9"
 description = "Monitor and Download Streams from a Variety of Websites"
-authors = [
-    "biodrone <biodrone@dangerous.tech>"
-]
+authors = [ "biodrone <biodrone@dangerous.tech>" ]
 readme = "README.md"
 
 [tool.poetry.dependencies]
