--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -29,6 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: Dockerfile.example
           load: true
           tags: dangeroustech/streamdl:latest
 
@@ -48,6 +49,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: Dockerfile.example
           platforms: linux/amd64, linux/arm64, linux/armhf
           push: true
           tags: |
