--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ PyYAML = "6.0"
 requests = "2.27.1"
 streamlink = "^3.1.1"
 yt-dlp = "^2022.1.21"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
