--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           context: .
           file: Dockerfile.example
-          platforms: linux/amd64, linux/arm64, linux/armhf
+          platforms: linux/amd64, linux/arm64
           push: true
           tags: |
             dangeroustech/streamdl:latest
