--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master, staging ]
 
 jobs:
-  test:
-    name: Test
+  Software_Test:
+    name: Software Tests
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
@@ -24,3 +24,15 @@ jobs:
           python -m poetry install
           python -m poetry run pytest -v
           python -m poetry run bandit -ll -c .bandit.yml streamdl.py
+  Docker_Test:
+    name: Docker Build Test
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: Docker Build
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.example
+          load: true
+          tags: dangeroustech/streamdl:latest
