ci: check out the repo first

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
     name: Docker Build Test
     runs-on: "ubuntu-latest"
     steps:
+      - uses: actions/checkout@v2
       - name: Docker Build
         id: docker_build
         uses: docker/build-push-action@v2
