feat: add proper tag to dockerhub push

--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -68,3 +68,4 @@ jobs:
           tags: |
             dangeroustech/streamdl:latest
             dangeroustech/streamdl:stable
+            dangeroustech/streamdl:${{ steps.changelog.outputs.tag }}
