--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -5,24 +5,20 @@ on:
     branches: [ master ]
 
 jobs:
-  docker:
-    name: Docker
-    runs-on: ubuntu-latest
+  Changelog_Release:
+    name: Changelog Release
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      
+      - uses: actions/setup-node@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          node-version: '16'
+          check-latest: true
+
+      - name: Install Changelog NPM Package
+        run: npm install conventional-changelog-conventionalcommits
 
       - name: Changelog
         uses: TriPSs/conventional-changelog-action@v3
@@ -48,6 +44,31 @@ jobs:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
+  Docker_Release:
+    name: Docker
+    runs-on: ubuntu-latest
+    needs: Changelog_Release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: 'Get Tag'
+        id: tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        with:
+          fallback: 1.0.0
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Dockerhub Push Stable
         id: dockerhub_stable_push
@@ -60,4 +81,4 @@ jobs:
           tags: |
             dangeroustech/streamdl:latest
             dangeroustech/streamdl:stable
-            dangeroustech/streamdl:${{ steps.changelog.outputs.tag }}
+            dangeroustech/streamdl:${{ steps.tag.outputs.tag }}
