--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requests = "2.27.1"
 streamlink = "^3.1.1"
 yt-dlp = "^2022.1.21"
 ffmpeg-python = "^0.2.0"
+grpcio = "^1.43.0"
+protobuf = "^3.19.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
