--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.10"]
         os: ["ubuntu-20.04", "ubuntu-latest"]
     steps:
       - uses: actions/checkout@v2
