--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -29,10 +29,11 @@ jobs:
           output-file: "CHANGELOG.md"
           tag-prefix: 'v'
           fallback-version: '2.1.1'
-          release-count: 0
+          release-count: 0 # preserve all versions in changelog
           version-file: pyproject.toml
           version-path: tool.poetry.version
           config-file-path: './.changelog.config.js'
+          skip-on-empty: false # otherwise we don't publish fixes
 
       - name: Create Release
         uses: actions/create-release@v1
