--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -48,3 +48,18 @@ jobs:
           tags: |
             dangeroustech/streamdl:${{ matrix.component }}_latest
             dangeroustech/streamdl:${{ matrix.component }}_staging
+      
+      - name: Snyk Scan
+        id: snyk_scan
+        uses: snyk/actions/docker@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          image: dangeroustech/streamdl:${{ matrix.component }}_latest
+          args: --severity-threshold=medium --file=Dockerfile.${{ matrix.component }}
+      
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
