--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,18 +1,18 @@
 # Export packages from poetry and save
 # to venv to avoid building them later
-FROM python:3.11-slim-bullseye as deps
+FROM python:3.11-bullseye as deps
 ENV VIRTUAL_ENV=/opt/venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 COPY . .
-RUN apt update && apt install -y build-essential
+# RUN apt update && apt install -y build-essential
 # RUN pip install --upgrade pip
 RUN pip install poetry==1.4.0
 RUN poetry export --without-hashes -o requirements.txt
 RUN pip install -r requirements.txt
 
 # Python Protobuf Server
-FROM python:3.11-slim-bullseye as server
+FROM python:3.11-bullseye as server
 WORKDIR /app
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
