--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 grpcio = "^1.51.3"
 protobuf = "^4.22.0"
 streamlink = "^5.3.1"
+wheel = "^0.38.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
