--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -8,7 +8,7 @@ RUN go get -v
 RUN go build -o streamdl
 
 # Golang Protobuf Client and Logic
-FROM golang:alpine3.17 as client
+FROM golang:1.20.2-alpine3.17 as client
 WORKDIR /app
 RUN mkdir -p /app/dl /app/out
 # Copy FFMPEG Binaries
