--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           context: .
           file: Dockerfile.${{ matrix.component }}
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             dangeroustech/streamdl:${{ matrix.component }}_latest
