--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -34,8 +34,25 @@ jobs:
         with:
           context: .
           file: Dockerfile.${{ matrix.component }}
-          load: true
-          tags: dangeroustech/streamdl:${{ matrix.component }}_latest
+          platforms: linux/amd64
+          # load: true
+          tags: dangeroustech/streamdl:${{ matrix.component }}_local
+
+      - name: Docker Scan
+        id: docker_scan
+        uses: snyk/actions/docker@master
+        continue-on-error: false
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          image: dangeroustech/streamdl:${{ matrix.component }}_local
+          args: --severity-threshold=medium --file=Dockerfile.${{ matrix.component }}
+      
+      - name: Upload result to GitHub Code Scanning
+        id: snyk_results_upload
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
 
       - name: Dockerhub Push Staging
         id: dockerhub_staging_push
@@ -44,22 +61,7 @@ jobs:
           context: .
           file: Dockerfile.${{ matrix.component }}
           platforms: linux/amd64
+          load: true
           push: true
           tags: |
-            dangeroustech/streamdl:${{ matrix.component }}_latest
             dangeroustech/streamdl:${{ matrix.component }}_staging
-      
-      - name: Snyk Scan
-        id: snyk_scan
-        uses: snyk/actions/docker@master
-        continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          image: dangeroustech/streamdl:${{ matrix.component }}_staging
-          args: --severity-threshold=medium --file=Dockerfile.${{ matrix.component }}
-      
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: snyk.sarif
