--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -3,6 +3,8 @@ name: "Dockerhub Build - Staging"
 on:
   push:
     branches: [ staging ]
+  pull_request:
+    branches: [ issue* ]
 
 jobs:
   docker:
