--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: "Test"
+name: "Pull Request Tests"
 
 on:
   pull_request:
@@ -25,16 +25,18 @@ jobs:
           python -m poetry run bandit -ll -c .bandit.yml streamdl_proto_srv.py
   Docker_Test:
     name: Docker Build Test
-    runs-on: "ubuntu-latest"
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
       matrix:
+        os: ["ubuntu-20.04", "ubuntu-latest"]
         component: ["client", "server"]
     steps:
       - uses: actions/checkout@v2
       - name: Docker Build
         id: docker_build
         uses: docker/build-push-action@v2
+        platforms: linux/amd64
         with:
           context: .
           file: Dockerfile.${{ matrix.component }}
