--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Upload result to GitHub Code Scanning
         id: snyk_results_upload
         uses: github/codeql-action/upload-sarif@v2
+        continue-on-error: true
         with:
           sarif_file: snyk.sarif
 
