--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,7 +1,7 @@
 FROM mwader/static-ffmpeg:4.4.1 as ffmpeg
 
 # Go Binary Builder
-FROM golang:alpine3.17 as go-build
+FROM golang:1.20.2-alpine3.17 as go-build
 WORKDIR /app
 COPY . .
 RUN go get -v
